# stock_prediction

./: .gitignore  README.md  app.py  attention.py  hParams.py  models.py  pyproject.toml  stock.h5  stock.py  transformer.py  utils.py
data/: AAPL_data.csv  AMZN_data.csv  META_data.csv  NDAQ_data.csv
results/: BiLSTM_128_128_Dense_64_1.txt  BiLSTM_128_64_64_Dense_256_128_64_1.txt  BiLSTM_128_64_Dense_256_128_64_1.txt  BiLSTM_128_64_Dense_32_1.txt  BiLSTM_128_64_Dense_512_256_128_64_1.txt  BiLSTM_128_64_Dense_64_1.txt  BiLSTM_128_Dense_128_128_64_1.txt  BiLSTM_128_Dense_512_256_128_64_1.txt  BiLSTM_256_128_Dense_64_1.txt  BiLSTM_256_128_Dense_64_32_1.txt  BiLSTM_256_128_Dense_64_64_1.txt  BiLSTM_64_32_Dense_128_128_64_1.txt  BiLSTM_64_64_Dense_128_128_64_1.txt  BiLSTM_64_Dense_128_128_64_1.txt  BiLSTM_64_Dense_256_128_64_1.txt  GRU_128_128_Dense_64_1.txt  GRU_128_32_Dense_32_1.txt  GRU_128_64_64_Dense_256_128_64_1.txt  GRU_128_64_Dense_256_128_64_1.txt  GRU_128_64_Dense_32_1.txt  GRU_128_64_Dense_512_256_128_64_1.txt  GRU_128_64_Dense_64_1.txt  GRU_128_Dense_128_128_64_1.txt  GRU_128_Dense_512_256_128_64_1.txt  GRU_256_128_Dense_64_1.txt  GRU_256_128_Dense_64_32_1.txt  GRU_256_128_Dense_64_64_1.txt  GRU_64_32_Dense_128_128_64_1.txt  GRU_64_64_Dense_128_128_64_1.txt  GRU_64_Dense_128_128_64_1.txt  GRU_64_Dense_256_128_64_1.txt  LSTM.txt  LSTM_128_128_Dense_64_1.txt  LSTM_128_64_64_Dense_256_128_64_1.txt  LSTM_128_64_Dense_256_128_64_1.txt  LSTM_128_64_Dense_32_1.txt  LSTM_128_64_Dense_512_256_128_64_1.txt  LSTM_128_64_Dense_64_1.txt  LSTM_128_Dense_128_128_64_1.txt  (+9 more)
(+2 files in other folders)
